tutorials/0.9/index.md
---
layout: page
title: 0.9 Tutorials
breadcrumb: 0.9
redirect_from: /tutorials/0.9.html
canonical: https://tgui.eu/tutorials/latest-stable/
---

### Installation tutorials

[Windows (Visual Studio)](visual-studio/)

[Windows (CodeBlocks)](windows-codeblocks/)

[macOS (Xcode)](macos-xcode/)

[Linux (also BSD and Raspberry Pi)](linux/)

[Android (SFML)](android-sfml/)

[Android (SDL)](android-sdl/)

[iOS](ios/)

[Building TGUI from source code with CMake](cmake/)

[Selecting backend in CMake](backends/)


### Getting started

[SFML backend](sfml-backend/)

[SDL backend](sdl-backend/)


### Introduction tutorials

[Creating, copying and removing widgets](creating-widgets/)

[Basic widget functions](basic-widget-functions/)

[Signals (event callbacks)](signals/)

[Strings](strings/)

[Layouts](layouts/)

[Renderers](renderers/)

[Using themes/skins](using-themes/)

[Switching between menu screens / forms](switching-screens/)


### Intermediate tutorials

[Show/Hide animations](show-hide-animations/)

[Tool Tips](tool-tips/)

[HorizontalLayout and VerticalLayout](box-layouts/)

[Changing mouse cursor](mouse-cursor/)


### Advanced tutorials

[Creating your own themes](custom-themes/)

[Creating your own widgets](custom-widgets/)

[Loading from zip file](loading-from-zip/)

[Merging themes at runtime](merging-themes-runtime/)


<br>
Make sure to also look at the <a href="/documentation/0.9/">documentation</a> and <a href="/examples/0.9/">examples</a>.
